--- a/project_3.html
+++ b/project_3.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html><html><head><meta charset='utf-8'><meta http-equiv='Access-Control-Allow-Origin' content='*'><meta http-equiv='Access-Control-Allow-Credentials' content='true'><script src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script><script src='https://fustyles.github.io/webduino/SpBlocklyJS/GameElements_20190131/gameelements.js'></script><script src='https://fustyles.github.io/webduino/SpBlocklyJS/MQTT_20220324/mqtt.min.js'></script><script src='https://fustyles.github.io/webduino/SpBlocklyJS/coco-ssd_20201012/coco-ssd_video.js'></script><script src='https://fustyles.github.io/webduino/SpBlocklyJS/coco-ssd_20201012/coco-ssd.js'></script><script src='https://fustyles.github.io/webduino/SpBlocklyJS/chart_20220723/jquery.simpleswitch.js'></script><link href='https://fustyles.github.io/webduino/SpBlocklyJS/chart_20220723/simpleswitch.css' type='text/css' rel='stylesheet'></script></head><body><script>const delay=(seconds)=>{return new Promise((resolve)=>{setTimeout(resolve,seconds*1000);});};const main=async()=>{
-var x, y, deviceID, _E9_96_8B_E9_97_9C_E7_8B_80_E6_85_8B, _E5_88_86_E5_B8_83_E7_8B_80_E6_85_8B, _E5_9F_B7_E8_A1_8C_E7_8B_80_E6_85_8B, i;
+var x, y, tag, code, deviceID, _E5_88_86_E5_B8_83_E4_BA_BA_E6_95_B8, _E5_9F_B7_E8_A1_8C_E7_8B_80_E6_85_8B, i;
 
 // 描述此函式...
-function _E5_88_86_E5_B8_83_E7_8B_80_E6_85_8B2(x, y) {
+function _E5_88_86_E5_B8_83_E7_8B_80_E6_85_8B(x, y) {
   if (x >= 0 && y >= 0) {
-    _E5_88_86_E5_B8_83_E7_8B_80_E6_85_8B[0] = true;
+    _E5_88_86_E5_B8_83_E4_BA_BA_E6_95_B8[0] = _E5_88_86_E5_B8_83_E4_BA_BA_E6_95_B8[0] + 1;
   } else if (x <= 0 && y >= 0) {
-    _E5_88_86_E5_B8_83_E7_8B_80_E6_85_8B[1] = true;
+    _E5_88_86_E5_B8_83_E4_BA_BA_E6_95_B8[1] = _E5_88_86_E5_B8_83_E4_BA_BA_E6_95_B8[1] + 1;
   } else if (x >= 0 && y <= 0) {
-    _E5_88_86_E5_B8_83_E7_8B_80_E6_85_8B[2] = true;
+    _E5_88_86_E5_B8_83_E4_BA_BA_E6_95_B8[2] = _E5_88_86_E5_B8_83_E4_BA_BA_E6_95_B8[2] + 1;
   } else if (x <= 0 && y <= 0) {
-    _E5_88_86_E5_B8_83_E7_8B_80_E6_85_8B[3] = true;
+    _E5_88_86_E5_B8_83_E4_BA_BA_E6_95_B8[3] = _E5_88_86_E5_B8_83_E4_BA_BA_E6_95_B8[3] + 1;
   }
 }
 
 // 描述此函式...
 function _E9_96_8B_E9_97_9C_E9_9B_BB_E6_89_87() {
-  if (_E9_96_8B_E9_97_9C_E7_8B_80_E6_85_8B[0] != _E5_88_86_E5_B8_83_E7_8B_80_E6_85_8B[0]) {
-    mqtt_client.publish('smartfan/ir', String(('?'+'RF'+'='+'1')));
-    _E9_96_8B_E9_97_9C_E7_8B_80_E6_85_8B[0] = _E5_88_86_E5_B8_83_E7_8B_80_E6_85_8B[0];
-  } else if (_E9_96_8B_E9_97_9C_E7_8B_80_E6_85_8B[1] != _E5_88_86_E5_B8_83_E7_8B_80_E6_85_8B[1]) {
-    mqtt_client.publish('smartfan/ir', String(('?'+'LF'+'='+'1')));
-    _E9_96_8B_E9_97_9C_E7_8B_80_E6_85_8B[1] = _E5_88_86_E5_B8_83_E7_8B_80_E6_85_8B[1];
-  } else if (_E9_96_8B_E9_97_9C_E7_8B_80_E6_85_8B[2] != _E5_88_86_E5_B8_83_E7_8B_80_E6_85_8B[2]) {
-    mqtt_client.publish('smartfan/ir', String(('?'+'RB'+'='+'1')));
-    _E9_96_8B_E9_97_9C_E7_8B_80_E6_85_8B[2] = _E5_88_86_E5_B8_83_E7_8B_80_E6_85_8B[2];
-  } else if (_E9_96_8B_E9_97_9C_E7_8B_80_E6_85_8B[3] != _E5_88_86_E5_B8_83_E7_8B_80_E6_85_8B[3]) {
-    mqtt_client.publish('smartfan/ir', String(('?'+'LB'+'='+'1')));
-    _E9_96_8B_E9_97_9C_E7_8B_80_E6_85_8B[3] = _E5_88_86_E5_B8_83_E7_8B_80_E6_85_8B[3];
+  _E9_A2_A8_E6_89_87('RF', 1);
+  _E9_A2_A8_E6_89_87('LF', 2);
+  _E9_A2_A8_E6_89_87('RB', 3);
+  _E9_A2_A8_E6_89_87('LB', 4);
+}
+
+// 描述此函式...
+function _E9_A2_A8_E6_89_87(tag, code) {
+  if (_E5_88_86_E5_B8_83_E4_BA_BA_E6_95_B8[(code - 1)] == 0) {
+    mqtt_client.publish('smartfan/ir', String(('?'+tag+'='+'m0'+';'+'s1')));
+  } else if (_E5_88_86_E5_B8_83_E4_BA_BA_E6_95_B8[(code - 1)] == 1) {
+    mqtt_client.publish('smartfan/ir', String(('?'+tag+'='+'m1'+';'+'s1')));
+  } else {
+    mqtt_client.publish('smartfan/ir', String(('?'+tag+'='+'m1'+';'+'s0')));
   }
 }
 
@@ -58,8 +60,7 @@ mqtt_client.on("connect", ()=>{
   }
 )
 
-_E9_96_8B_E9_97_9C_E7_8B_80_E6_85_8B = [false, false, false, false];
-_E5_88_86_E5_B8_83_E7_8B_80_E6_85_8B = [false, false, false, false];
+_E5_88_86_E5_B8_83_E4_BA_BA_E6_95_B8 = [0, 0, 0, 0];
 simpleSwitch({
 	id: 'RF',
 	width: 80,
@@ -109,13 +110,10 @@ simpleSwitch({
 	func: switch_TWlWRmVXNwEDG
 });
 mqtt_client.publish('smartfan/ir', String(('?'+'ALL'+'='+'TH')));
-//mqtt_client.publish('smartfan/ir', String(('?'+'RF'+'='+'TH')));
-//mqtt_client.publish('smartfan/ir', String(('?'+'LF'+'='+'TH')));
-//mqtt_client.publish('smartfan/ir', String(('?'+'RB'+'='+'TH')));
-//mqtt_client.publish('smartfan/ir', String(('?'+'LB'+'='+'TH')));
 _E5_9F_B7_E8_A1_8C_E7_8B_80_E6_85_8B = true;
 cocossd_video("none","1","1","1");
 cocossd_startvideo_media(320,240,"front",0);
+
 cocossd_recognitionFinish = async function() {
 cocossd_state(0);
   canvas_line(("cocossd"),1,160,0,160,240,'#ffff33',0,1);
@@ -126,7 +124,7 @@ cocossd_state(0);
   canvas_text(("cocossd"),'LB',0,25,'Arial',30,"start",true,'#33ff33',0,1);
   if (_E5_9F_B7_E8_A1_8C_E7_8B_80_E6_85_8B == true) {
     _E5_9F_B7_E8_A1_8C_E7_8B_80_E6_85_8B = false;
-    _E5_88_86_E5_B8_83_E7_8B_80_E6_85_8B = [false, false, false, false];
+    _E5_88_86_E5_B8_83_E4_BA_BA_E6_95_B8 = [0, 0, 0, 0];
     if ((cocossd_object_number("person")) > 0) {
       var i_end = (cocossd_object_number("person")) - 1;
       var i_inc = 1;
@@ -135,13 +133,13 @@ cocossd_state(0);
       }
       for (i = 0; i_inc >= 0 ? i <= i_end : i >= i_end; i += i_inc) {
         canvas_arc(("cocossd"),3,(cocossd_object("person",i,"bottomx")),(cocossd_object("person",i,"bottomy")),3,0,6.284,false,true,'#ffff00',0,1);
-        _E5_88_86_E5_B8_83_E7_8B_80_E6_85_8B2((cocossd_object("person",i,"bottomx")) - 160, (cocossd_object("person",i,"bottomy")) - 120);
+        _E5_88_86_E5_B8_83_E7_8B_80_E6_85_8B((cocossd_object("person",i,"bottomx")) - 160, (cocossd_object("person",i,"bottomy")) - 120);
       }
     }
     _E9_96_8B_E9_97_9C_E9_9B_BB_E6_89_87();
     setTimeout(async function(){
       _E5_9F_B7_E8_A1_8C_E7_8B_80_E6_85_8B = true;
-    },10000);
+    },5000);
   }
 
 cocossd_state(1);};
