--- a/project.html
+++ b/project.html
@@ -83,15 +83,15 @@ button_create('1',90,30,40,40,1,null,'遙控器控制',12,999,true);
 button_create('2',90,30,140,40,1,null,'定時開關控制',12,999,true);
 button_create('3',90,30,240,40,1,null,'物件辨識控制',12,999,true);
 async function gamebutton_1_onclick (event) {
-  window.open('https://fustyles.github.io/webduino/project/project_1.html',"_parent");
+  window.open('https://stanleycrocodile.github.io/Web/project_1.html',"_parent");
 };
 document.getElementById("gamebutton_1").addEventListener("click", gamebutton_1_onclick, true);
 async function gamebutton_2_onclick (event) {
-  window.open('https://fustyles.github.io/webduino/project/project_2.html',"_parent");
+  window.open('https://stanleycrocodile.github.io/Web/project_2.html',"_parent");
 };
 document.getElementById("gamebutton_2").addEventListener("click", gamebutton_2_onclick, true);
 async function gamebutton_3_onclick (event) {
-  window.open('https://fustyles.github.io/webduino/project/project_3.html',"_parent");
+  window.open('https://stanleycrocodile.github.io/Web/project_3.html',"_parent");
 };
 document.getElementById("gamebutton_3").addEventListener("click", gamebutton_3_onclick, true);
 await delay(3);
