--- a/project_1.html
+++ b/project_1.html
@@ -16,7 +16,7 @@ const options = {
 	connectTimeout: 30 * 1000
 }
 
-var mqtt_client = mqtt.connect('wss://broker.emqx.io:8084/mqtt',options);
+var mqtt_client = mqtt.connect('wss://broker.mqttgo.io:8084/mqtt',options);
 mqtt_client.on("connect", ()=>{
 	console.log("connected");
   mqtt_client.subscribe('smartfan/temperature');
