--- a/project_3.html
+++ b/project_3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head><meta charset='utf-8'><meta http-equiv='Access-Control-Allow-Origin' content='*'><meta http-equiv='Access-Control-Allow-Credentials' content='true'><script src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script><script src='https://fustyles.github.io/webduino/SpBlocklyJS/GameElements_20190131/gameelements.js'></script><script src='https://fustyles.github.io/webduino/SpBlocklyJS/MQTT_20220324/mqtt.min.js'></script><script src='https://fustyles.github.io/webduino/SpBlocklyJS/coco-ssd_20201012/coco-ssd_video.js'></script><script src='https://fustyles.github.io/webduino/SpBlocklyJS/coco-ssd_20201012/coco-ssd.js'></script><script src='https://fustyles.github.io/webduino/SpBlocklyJS/chart_20220723/jquery.simpleswitch.js'></script><link href='https://fustyles.github.io/webduino/SpBlocklyJS/chart_20220723/simpleswitch.css' type='text/css' rel='stylesheet'></script></head><body><script>const delay=(seconds)=>{return new Promise((resolve)=>{setTimeout(resolve,seconds*1000);});};const main=async()=>{
-var x, y, tag, code, _E5_88_86_E5_B8_83_E4_BA_BA_E6_95_B8, _E5_9F_B7_E8_A1_8C_E7_8B_80_E6_85_8B, deviceID, command;
+var x, y, tag, code, myTimer, _E5_88_86_E5_B8_83_E4_BA_BA_E6_95_B8, _E5_9F_B7_E8_A1_8C_E7_8B_80_E6_85_8B, deviceID, command;
 
   function mqttBinarytobase64(input_array) {
     const content = new Uint8Array(input_array);
@@ -143,6 +143,7 @@ cocossd_startvideo_media(320,240,"front",0);
 
 cocossd_recognitionFinish = async function() {
 cocossd_state(0);
+  clearInterval(myTimer);
   canvas_line(("cocossd"),1,160,0,160,240,'#ffff33',0,1);
   canvas_line(("cocossd"),1,0,120,320,120,'#ffff33',0,1);
   canvas_text(("cocossd"),'RF',280,230,'Arial',30,"start",true,'#33ff33',0,1);
@@ -174,6 +175,13 @@ cocossd_state(0);
     _E9_96_8B_E9_97_9C_E9_9B_BB_E6_89_87();
     setTimeout(async function(){
       _E5_9F_B7_E8_A1_8C_E7_8B_80_E6_85_8B = true;
+    },10000);
+    myTimer = setInterval(async function(){
+      mqtt_client.publish('smartfan/ir', String(('?'+'ALL'+'='+'m0'+';'+'s1')));
+      span_set(1,"innerHTML",'停止');
+      span_set(2,"innerHTML",'停止');
+      span_set(3,"innerHTML",'停止');
+      span_set(4,"innerHTML",'停止');
     },10000);
   }
 
